test/types/file/bradc/badfile.good
Error: Symbol 'thisVariableDoesntExist' is not defined (badfile.chpl:1)
